Fix spacing issues, fix naming inconsistencies. Fix conflicts.
Used `issuable` instead

--- a/app/assets/stylesheets/pages/projects.scss
+++ b/app/assets/stylesheets/pages/projects.scss
@@ -560,6 +560,6 @@ pre.light-well {
 }
 
 .cannot-be-merged, .cannot-be-merged:hover {
-  color: $error-exclamation-point;
+  color: #E62958;
   margin-top: 2px;
 }
